# Secure_OTA_Update_Security_Mechanism

./: .gitignore  README.md  Secure OTA.docx  knowledge_requirement.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  firmware-signing.yml  security-scan.yml
AI_Search/: chatgpt.txt  claude.txt  gemini.txt  perplexity.txt
Demo/: server.py
Literature_Review/: Literature_Review_With_Author_Year_Citations.docx
PPT/: SentinelOTA_Building_Resilient_IoT_Defense (1).docx  SentinelOTA_Building_Resilient_IoT_Defense.pptx
Review_2/: Section_4_New_Algorithms_Used.md
cli/: __init__.py  firmware_builder.py  ota_cli.py  provisioning.py
client/: CMakeLists.txt  delta_update.c  delta_update.h  hal.h  hal_esp32.c  ota_client.c  ota_client.h  rollback.c  rollback.h
docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml
docker/nginx/: nginx.conf
security/: __init__.py  audit_logger.py  certificate_manager.py  key_management.py
server/: __init__.py  app.py  config.py  database.py  dependencies.py  models.py
server/routes/: __init__.py  audit.py  auth.py  deployments.py  devices.py  firmware.py
server/security/: __init__.py  crypto.py  jwt_handler.py  pki.py  tls.py
tests/: __init__.py  conftest.py  test_crypto.py  test_deployments.py  test_firmware.py  test_server.py
vscode/: Internet_references.txt
vscode/README/: OTA_IOT_Security_Comprehensive_Guide.md  OTA_Security_Implementation_Examples.md  OTA_Security_Quick_Reference.md
